<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--            Mũi tên lùi về-->

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_left_arrow"
                android:contentDescription="@string/app_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:gravity="center">

            <TextView
                android:id="@+id/textview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txtview1"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:id="@+id/questionView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/noi_dung_cau_hoi"
            android:gravity="center_vertical"
            android:textSize="15sp"
            android:padding="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:gravity="center"
        android:orientation="vertical"
        >

        <CheckBox
            android:id="@+id/checkA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quesA"
            android:textSize="25sp"
            android:layout_marginTop="25dp"
            />
        <CheckBox
            android:id="@+id/checkB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quesB"
            android:textSize="25sp"
            android:layout_marginTop="25dp"
            />
        <CheckBox
            android:id="@+id/checkC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quesC"
            android:textSize="25sp"
            android:layout_marginTop="25dp"/>
        <CheckBox
            android:id="@+id/checkD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quesD"
            android:textSize="25sp"
            android:layout_marginTop="25dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:onClick="showPopup"
            android:id="@+id/btnNext"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:text="@string/btnSu"
            android:textSize="20sp"
            android:padding="10dp" />
    </LinearLayout>
</LinearLayout>