<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:drawableLeft="@drawable/ic_iconmonstr_user_5"
        android:drawableStart="@drawable/ic_iconmonstr_user_5"
        android:drawablePadding="20dp"
        android:drawableTint="@color/tint"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:textCursorDrawable="@null"
        android:inputType="textPersonName"
        app:layout_constraintWidth_percent=".6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.244"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:drawableLeft="@drawable/ic_mail"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="20dp"
        android:drawableTint="@color/tint"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:textCursorDrawable="@null"
        android:inputType="textEmailAddress"
        app:layout_constraintWidth_percent=".6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:drawableLeft="@drawable/ic_lock"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="20dp"
        android:drawableTint="@color/tint"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:textCursorDrawable="@null"
        android:inputType="textPassword"
        app:layout_constraintWidth_percent=".6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:drawableLeft="@drawable/ic_shield_checkmark_black"
        android:drawableStart="@drawable/ic_shield_checkmark_black"
        android:drawablePadding="20dp"
        android:drawableTint="@color/tint"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:textCursorDrawable="@null"
        android:inputType="textPassword"
        app:layout_constraintWidth_percent=".6"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        android:autofillHints="" />

    <android.widget.Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background="@drawable/button_signinac"
        android:textColor="@color/purple_500"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3"
        app:layout_constraintWidth_percent=".6" />
</androidx.constraintlayout.widget.ConstraintLayout>