<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:drawableLeft="@drawable/ic_mail"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="20dp"
        android:drawableTint="@color/tint"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:textCursorDrawable="@null"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent=".6"
        tools:ignore="TextFields"
        android:importantForAutofill="yes"
        android:autofillHints="" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintWidth_percent=".6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="20dp"
            android:drawableTint="@color/tint"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0" />

    <android.widget.Button
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:background="@drawable/button_signinac"
        android:textColor="@color/purple_500"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintWidth_percent=".6" />
</androidx.constraintlayout.widget.ConstraintLayout>